trying to fix bug pseudo text on iPhone

--- a/css/styles.css
+++ b/css/styles.css
@@ -1042,6 +1042,7 @@ textarea {
 
 .ball-text::before {
   content: "Off";
+  transition: content;
 }
 
 .material-icons {
