--- a/scss/components/_typography.scss
+++ b/scss/components/_typography.scss
@@ -311,6 +311,6 @@ textarea {
 
 .ball-text::before {
     content: "Off";
-
+    transition: content;
     
   }
